src/tests/errors/syntax/016.ura
// errors/syntax/016 — `proto` not followed by `fn` or `struct`
use "@/header"

proto x int

main():
    output("hi\n")
