src/tests/errors/syntax/016.err
[1m[0;31merror: [0mexpected `fn` or `struct` after `proto`
  [1m[34m-->[0m src/tests/errors/syntax/016.ura:4:1
  [1m[34m|[0m
[1m[34m4 |[0m proto x int
  [1m[34m|[0m [1;31m^^^^^[0m
